syntax = "proto3";
package pb;

service Dictionary{
	rpc Words(WordsRequest) returns (WordsResponce) {}
    rpc AddNewWord(AddNewWordRequest) returns (AddNewWordResponce) {}
	rpc GetByID(GetByIDRequest) returns (GetByIDResponce) {}
	rpc GetByW(GetByWRequest) returns (GetByWResponce) {}
}

message AddNewWordRequest{
    Word word = 1;
}

message AddNewWordResponce{
    string id = 1;
}

message WordsRequest{
    bool none = 1;
}

message WordsResponce{
    repeated Word words = 2;
}

message GetByIDRequest{
    string id = 1;
}

message GetByIDResponce{
    Word word = 1;
}

message GetByWRequest{
    string w = 1;
}

message GetByWResponce{
    Word word = 1;
}

message Word{
    string word = 1;
    repeated string examples = 2;
    string Transcription = 3;
}